--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -115,6 +115,7 @@ video {
 
 		.front-poster {
 			width: 45%;
+			height: 100%;
 			background-image: url("/src/assets/poster2.webp");
 			background-size: cover;
 			z-index: 3;
